--- a/shanhai-formrules-examples/pom.xml
+++ b/shanhai-formrules-examples/pom.xml
@@ -34,7 +34,12 @@
         <dependency>
             <groupId>com.wangshanhai.formrules</groupId>
             <artifactId>shanhai-formrules-spring-boot-starter</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.18.1</version>
         </dependency>
     </dependencies>
 </project>
