--- a/shanhai-formrules-spring-boot-starter/pom.xml
+++ b/shanhai-formrules-spring-boot-starter/pom.xml
@@ -5,19 +5,31 @@
     <parent>
         <artifactId>shanhai-formrules-parent</artifactId>
         <groupId>com.wangshanhai.formrules</groupId>
-        <version>1.0.1</version>
+        <version>1.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>shanhai-formrules-spring-boot-starter</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <redisson.version>3.18.1</redisson.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>${redisson.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
