--- a/shanhai-formrules-examples/pom.xml
+++ b/shanhai-formrules-examples/pom.xml
@@ -34,12 +34,30 @@
         <dependency>
             <groupId>com.wangshanhai.formrules</groupId>
             <artifactId>shanhai-formrules-spring-boot-starter</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.18.1</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.31</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.13</version>
         </dependency>
     </dependencies>
 </project>
