--- a/shanhai-formrules-examples/src/main/resources/application.yml
+++ b/shanhai-formrules-examples/src/main/resources/application.yml
@@ -1,3 +1,16 @@
+spring:
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/shanhai_forms?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true
+    username: root
+    password: root
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 1
+
 shanhai:
   reqlock:
     strategy: redisson
+  sqllock:
+    cacheType: redis
