--- a/shanhai-formrules-spring-boot-starter/pom.xml
+++ b/shanhai-formrules-spring-boot-starter/pom.xml
@@ -9,11 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>shanhai-formrules-spring-boot-starter</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <redisson.version>3.18.1</redisson.version>
+        <hutool.version>5.7.13</hutool.version>
     </properties>
     <dependencies>
         <dependency>
@@ -30,6 +31,22 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>${redisson.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
